[package]
name = "glyph-atlas"
version = "0.1.0"
authors = ["Jason Han <jjhan@alum.vassar.edu>"]
license = "MIT"
description = "A dissection of Alacritty's glyph atlas"
readme = "README.md"
homepage = "https://github.com/jason5122/glyph-atlas"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
crossfont = { path = "crossfont" }
glutin = { version = "0.30.4" }
log = { version = "0.4", features = ["std"] }
raw-window-handle = "0.5.0"
unicode-width = "0.1"
winit = { version = "0.29.0-beta.0" }

[build-dependencies]
gl_generator = "0.14.0"
bindgen = "0.59"
cc = "1.0"

[profile.release]
lto = "thin"
opt-level = 3
incremental = false
