[package]
name = "glyph-atlas"
version = "0.1.0"
authors = ["Jason Han <jjhan@alum.vassar.edu>"]
license = "MIT"
description = "A dissection of Alacritty's glyph atlas"
readme = "README.md"
homepage = "https://github.com/jason5122/glyph-atlas"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
glutin = { version = "0.30.4" }
log = { version = "0.4", features = ["std"] }
raw-window-handle = "0.5.0"
winit = { version = "0.29.0-beta.0" }

[build-dependencies]
bindgen = "0.59"
cc = "1.0"

[profile.release]
lto = "thin"
opt-level = 3
incremental = false
