[package]
name = "crossfont"
version = "0.5.2"
description = "Cross platform native font loading and rasterization"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
libc = "0.2"
foreign-types = "0.5"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
core-text = "20.1.0"
core-graphics = "0.23.1"
