[package]
edition = "2021"
rust-version = "1.60.0"
name = "glutin"
version = "0.30.10"

[dependencies.bitflags]
version = "1.3.2"

[dependencies.once_cell]
version = "1.13"

[dependencies.raw-window-handle]
version = "0.5.0"

[build-dependencies.cfg_aliases]
version = "0.1.1"

[target."cfg(any(target_os = \"macos\"))".dependencies.cgl]
version = "0.3.2"

[target."cfg(any(target_os = \"macos\"))".dependencies.core-foundation]
version = "0.9.3"

[target."cfg(any(target_os = \"macos\"))".dependencies.dispatch]
version = "0.2.0"

[target."cfg(any(target_os = \"macos\"))".dependencies.objc2]
version = ">=0.3.0-beta.3, <0.3.0-beta.4"
